--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <input type="search" id="search" name="search">
 
       <div class="cart"> <abbr title="Khejur borfi">
-        <img src="img/oo.jpg" width="50px" height="40px" alt="Cart">
+        <img src="oo.jpg" width="50px" height="40px" alt="Cart">
         <span id="cart-count">0</span>
       </abbr></div>
     </div>
