--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <!-- Add your product cards here -->
      
       <div class="product" data-id="1">
-        <img src="img/borfi.jpg" alt="khejur Borfi">
+        <img src="borfi.jpg" alt="khejur Borfi">
         <h3>khejur borfi</h3>
         <p>10 taka</p>
         <div class="rating">
@@ -172,7 +172,7 @@
 
       
       <div class="product" data-id="2">
-        <img src="img/pitha.jpg" alt="Nokshi Pitha">
+        <img src="pitha.jpg" alt="Nokshi Pitha">
         <h3>Nokshi Pitha</h3>
         <p>5 taka</p>
         <div class="rating">
@@ -185,7 +185,7 @@
         <button class="add-to-cart">Add to Cart</button>
       </div>
       <div class="product" data-id="3">
-        <img src="img/tshirt.jpg" alt="T-Shirt">
+        <img src="tshirt.jpg" alt="T-Shirt">
         <h3>T-Shirt</h3>
         <p>500 Taka</p>
         <div class="rating">
@@ -197,7 +197,7 @@
         <button class="add-to-cart">Add to Cart</button>
       </div>
       <div class="product" data-id="4">
-        <img src="img/cake1.jpg" alt="Cake">
+        <img src="cake1.jpg" alt="Cake">
         <h3>Cake</h3>
         <p>70 Taka</p>
         <div class="rating">
