--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
         <button class="add-to-cart">Add to Cart</button>
       </div>
       <div class="product" data-id="3">
-        <img src="
-tshirt.jpg" alt="T-Shirt">
+        <img src="tshirt.jpg" alt="T-Shirt">
         <h3>T-Shirt</h3>
         <p>500 Taka</p>
         <div class="rating">
