--- a/contract.html
+++ b/contract.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <p style="font-family: verdana; color: rgb(7, 118, 177);"> Call or msg us for Confirm your order: <br/><br/><a href="tel:01315437808"><img src="call.jpg" height="40px" width="40px"></a> <br/> <br/>
-<p style="font-family: verdana; color: rgb(9, 121, 169);">Our facebook page: <br/><br/><a href="http://facebook.com"><img src="images.jpg" height="40px" width="40px"></a>
+<p style="font-family: verdana; color: rgb(9, 121, 169);">Our facebook page: <br/><br/><a href="http://facebook.com"><img src="
+fb.jpg
+" height="40px" width="40px"></a>
 
 
 </body>
