--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </head>
 
 
-<body style="background-color: rgb(197, 220, 239);">
+<body style="background-color: #000000;">
   <div class="container">
     <div class="header">
       <div class="logo">MUNJIM'S<br/>
