--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </head>
 
 
-<body style="background-color: #D6EAF8;">
+<body style="background-color: #F2F4F4;">
   <div class="container">
     <div class="header">
       <div class="logo">MUNJIM'S<br/>
