--- a/index.html
+++ b/index.html
@@ -211,6 +211,20 @@ tshirt.jpg" alt="T-Shirt">
         </div>
         <button class="add-to-cart">Add to Cart</button>
       </div>
+      <div class="product" data-id="5">
+        <img src="C:\HTML\fiddlepie1/pitha.jpg" alt="Nokshi Pitha">
+        <h3>Nokshi Pitha</h3>
+        <p>5 taka</p>
+        <div class="rating">
+          <span>⭐</span>
+          <span>⭐</span>
+          <span>⭐</span>
+          <span>⭐</span>
+          <span>(4)</span>
+        </div>
+        <button class="add-to-cart">Add to Cart</button>
+      </div>
+      
     </div>
   </div>
   <script>
@@ -261,7 +275,7 @@ tshirt.jpg" alt="T-Shirt">
     // Call the update cart count function on page load
     updateCartCount();
   </script>
-  <p>hello this is a official page of Munjima's</p>
+  
   <br/>
   <br/>
 
