--- a/index.html
+++ b/index.html
@@ -212,9 +212,10 @@ tshirt.jpg" alt="T-Shirt">
         <button class="add-to-cart">Add to Cart</button>
       </div>
       <div class="product" data-id="5">
-        <img src="C:\HTML\fiddlepie1/pitha.jpg" alt="Nokshi Pitha">
-        <h3>Nokshi Pitha</h3>
-        <p>5 taka</p>
+        <img src="
+Cookie.jpg" alt="Cookie">
+        <h3>Cookie</h3>
+        <p>10 taka</p>
         <div class="rating">
           <span>⭐</span>
           <span>⭐</span>
